[package]
name = "morse_code_converter"
version = "0.1.0"
description = "A simple Rust WASM app to convert text to Morse code and back"
repository = "https://github.com/gavincangan/morse_code_converter"
license = "MIT"  # or whatever license you prefer
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.7"

[dependencies.web-sys]
version = "0.3.61"
features = ["console"]